--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
     <meta property="og:image:alt" content="Pavlos Nikolaou | Professional Photographer" />
+    <meta name="google-adsense-account" content="ca-pub-8340435460300155">
     <!-- End Open Graph data -->
 
     <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
@@ -61,6 +62,11 @@
     <!-- Google Ads -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8340435460300155"
         crossorigin="anonymous"></script>
+    <!-- End Google Ads -->
+
+    <!-- Google AdSense code snippet -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8340435460300155"
+     crossorigin="anonymous"></script>
     <!-- End Google Ads -->
     
 
