--- a/products/index.html
+++ b/products/index.html
@@ -26,6 +26,7 @@
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="300">
     <meta property="og:image:alt" content="Product photograpny by Pavlos Nikolaou">
+    <meta name="google-adsense-account" content="ca-pub-8340435460300155">
     <!-- End Open Graph data -->
 
     <link rel="icon" href="https://pavlosnikolaou.com/assets/images/favicon.ico" />
@@ -59,6 +60,12 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8582436112221582"
         crossorigin="anonymous"></script>
     <!-- End Google Ads -->
+
+    <!-- Google AdSense code snippet -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8340435460300155"
+     crossorigin="anonymous"></script>
+    <!-- End Google Ads -->
+    
 
 </head>
 <!-- End Head -->
